Updated gnome control center contents title
Change-Id: I4351718fc9907ceecf853d1e02180bda5083ae82

--- a/resources/gnome-control-center/color-assignprofiles.html
+++ b/resources/gnome-control-center/color-assignprofiles.html
@@ -16,6 +16,8 @@
         <li><img class="img" src="grey.svg">
         <li><a href="color">색</a>
         <li><img class="img" src="grey.svg">
+        <li><a href="color#top">색 관리</a>
+        <li><img class="img" src="grey.svg">
         </li><li><a href="#top">색 프로파일 설정</a>
       </ul>
     </nav>
@@ -25,7 +27,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">색 프로파일 설정</font><br>
+      <font class="font title" id="title">색 프로파일 설정</font><br>
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
