--- a/resources/gnome-control-center/file-autorun.html
+++ b/resources/gnome-control-center/file-autorun.html
@@ -22,7 +22,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">이동식 미디어</font><br>
+      <font class="font title" id="title">이동식 미디어</font><br>
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
