--- a/resources/gnome-control-center/net-general.html
+++ b/resources/gnome-control-center/net-general.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">네트워크 용어 및 팁</font><br>
+      <font class="font title" id="title">네트워크 용어 및 팁</font><br>
 
       <!--display-->
       <div class="small_rec left">
@@ -78,10 +78,9 @@ IP 주소를 알고 있으면 네트워크 문제를 해결하는 데 도움이 
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="net">네트워크</a><br><br>
-
+      <a href="net">네트워크</a><br>
+      <a href="net-wireless">와이파이</a><br><br>
       <font class="font ref">참고 항목</font><br>
-      <a href="net-wireless">와이파이</a></font>
     </footer>
 
     <footer class="info">
