--- a/resources/gnome-control-center/net-problem.html
+++ b/resources/gnome-control-center/net-problem.html
@@ -86,7 +86,7 @@
       </div>
 
       <!--net-wireless-disconnecting-->
-      <div class="small_rec right">
+      <!--div class="small_rec right">
         <font class="font text">
           <pre><a href="net-wireless-disconnecting">와이파이 연결이 계속 끊어짐</a>
 
@@ -94,13 +94,13 @@
           </pre>
         </font>
       </div>
-    </div>  <!-- end of div_root-->
+    </div-->  <!-- end of div_root-->
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="net">네트워크</a><br><br>
+      <a href="net">네트워크</a><br>
+      <a href="net-wireless">와이파이</a><br><br>
       <font class="font ref">참고 항목</font><br>
-      <a href="net-wireless">와이파이</a></font>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
