--- a/resources/gnome-control-center/net-proxy.html
+++ b/resources/gnome-control-center/net-proxy.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">프록시 설정</font><br>
+      <font class="font title" id="title">프록시 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
