--- a/resources/gnome-control-center/net-wrongnetwork.html
+++ b/resources/gnome-control-center/net-wrongnetwork.html
@@ -15,7 +15,9 @@
        <li><img class="img" src="help.svg">
        <li><a href="index">설정</a>
        <li><img class="img" src="grey.svg">
-       <li><a href="net-wireless">와이파이</a>
+       <li><a href="net#top">네트워크</a>
+       <li><img class="img" src="grey.svg">
+       <li><a href="net-problem#top">네트워크 문제</a>
        <li><img class="img" src="grey.svg">
        <li><a href="#top">컴퓨터가 잘못된 네트워크에 연결됨</a>
      </ul>
@@ -46,7 +48,7 @@
 
 4. [설정] <img class="img" src="emblem-system-symbolic.svg"> 아이콘을 클릭합니다.
 
-5. [Forget Connection] 단추를 클릭합니다. 컴퓨터는 더 이상 이 네트워크에 연결을 시도하지 않습니다.</div>
+5. [연결 저장 지우기] 단추를 클릭합니다. 컴퓨터는 더 이상 이 네트워크에 연결을 시도하지 않습니다.</div>
 
 연결 해제한 네트워크에 다시 연결하려면 <a href="net-wireless-connect">와이파이에 연결</a>을 참고하세요.</pre>
      </font></div>
