--- a/resources/gnome-control-center/net.html
+++ b/resources/gnome-control-center/net.html
@@ -36,7 +36,7 @@
         <font class="font text">
           <pre><a href="net-general">네트워크 용어 및 팁</a>
 
-프록시 설정, IP 주소 찾기, WEP & WPA 보안, MAC 주소 등에 관한 정보를 제공합니다.
+프록시 설정, IP 주소, MAC 주소 등에 관한 정보를 제공합니다.
           </pre>
         </font>
 
