--- a/resources/gnome-control-center/prefs-details.html
+++ b/resources/gnome-control-center/prefs-details.html
@@ -51,13 +51,13 @@
        </font>
      </div>
 
-     <div class="small_rec right">
+     <!--div class="small_rec right">
       <font class="font text">
         <pre><a href="details-default_program">기본 프로그램</a>
         
 선택한 파일 형식에 따라 기본적으로 사용할 프로그램을 확인하고 변경할 수 있습니다.</pre>
       </font>
-    </div>
+    </div-->
 
    </div> <!-- end of div_root-->
    <footer class="info">
