--- a/resources/gnome-control-center/prefs.html
+++ b/resources/gnome-control-center/prefs.html
@@ -1,11 +1,11 @@
 <HTML>
  <HEAD>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   <title>설정</title>
    <script src="script.js"></script>
    <link rel="stylesheet" href="style.css" type="text/css">
  </HEAD>
  <BODY>
-
    <!-- header -->
    <header><a name="top"></a></header>
  
@@ -16,99 +16,131 @@
        <li><a href="#top">설정</a>
      </ul>
     </nav> <!--end of navbar-->
+
    <!-- contents  -->
 
    <!-- for align 30px -->
    <div class="div_root">
 
      <!--TiTle -->
-     <img class="img" src="control-pannel.png">
-     <font class="font title">사용자 및 시스템 설정</font><br>
+     <img class="img" src="control-pannel.png" width="30">
+     <font class="font title" id="title">설정</font><br>
 
      <!--1st-->
      <div class="list_rec left" style="float:left">
        <font class="font text">
-         <pre>와이파이</pre>
+         <pre><a href="net-wireless">와이파이</a>
+
+와이파이를 사용하여 네트워크 연결을 설정할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec">
        <font class="font text">
-         <pre><a href="bluetooth">블루투스</a></pre>
+         <pre><a href="bluetooth">블루투스</a>
+
+블루투스 설정 및 블루투스 장치를 연결할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec right">
        <font class="font text">
-         <pre>배경</pre>
+         <pre><a href="background">배경</a>
+         
+배경 패널을 이용하여 사용자가 원하는 배경 화면을 지정할 수 있습니다.</pre>
        </font>
      </div><!--end of 1st-->
 
      <!--2nd-->
      <div class="list_rec left" style="float:left">
        <font class="font text">
-         <pre><a href="font">글꼴</a></pre>
+         <pre><a href="font">글꼴</a>
+
+시스템 글자를 원하는 형태로 변경할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec">
        <font class="font text">
-         <pre>테마</pre>
+         <pre><a href="theme">테마</a>
+         
+구름에서 제공하는 3가지 테마를 이용해 자신만의 스타일로 바탕 화면을 꾸밀 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec right">
        <font class="font text">
-         <pre><a href="prefs-language">지역 및 언어</a></pre>
+         <pre><a href="search">검색</a>
+
+검색하여 원하는 기능을 찾을 수 있습니다.</pre>
        </font>
      </div><!--end of 2nd-->
 
      <!--3rd-->
      <div class="list_rec left" style="float:left">
        <font class="font text">
-         <pre><a href="a11y">접근성</a></pre>
+         <pre><a href="prefs-language">지역 및 언어</a>
+
+시스템 언어 및 형식을 설정할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec">
        <font class="font text">
-         <pre><a href="privacy">개인 정보</a></pre>
+         <pre><a href="a11y">접근성</a>
+
+글자 크기, 마우스, 키보드 등 사용성과 관련된 기능을 설정할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec right">
        <font class="font text">
-         <pre><a href="media">소리</a></pre>
+         <pre><a href="privacy">개인 정보</a>
+
+사용자의 개인정보와 관련된 기능을 설정합니다.</pre>
        </font>
      </div><!--end of 3rd-->
 
      <!--4th-->
      <div class="list_rec left" style="float:left">
        <font class="font text">
-         <pre><a href="power">전원</a></pre>
+         <pre><a href="media">소리</a>
+
+스피커, 마이크, 효과음, 실행중인 프로그램 음량 등을 조절할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec">
        <font class="font text">
-         <pre>네트워크</pre>
+         <pre><a href="power">전원</a>
+
+화면 절전, 화면 잠금 등 시스템 전원과 관련된 기능을 설정할 수 있습니다.</pre>
        </font>
      </div>
 
      <div class="list_rec right">
        <font class="font text">
-         <pre><a href="prefs-device">장치</a></pre>
+         <pre><a href="net">네트워크</a>
+
+네트워크 연결 및 IP 주소등을 설정할 수 있습니다.</pre>
        </font>
      </div><!--end of 4th-->
 
      <!--5th-->
      <div class="list_rec left" style="float:left">
        <font class="font text">
-         <pre><a href="prefs-details">자세히 보기</a></pre>
+         <pre><a href="prefs-device">장치</a>
+
+모니터, 프린터 등 컴퓨터와 연결된 장치와 관련된 기능을 설정할 수 있습니다.</pre>
        </font>
      </div>
 
-     <div class="list_rec"style="background-color:#ffffff;">
+     <div class="list_rec">
+       <font class="font text">
+         <pre><a href="prefs-details">자세히 보기</a>
+
+사용자 계정, 기본 프로그램 등 사용자와 관련된 기능을 설정할 수 있습니다.</pre>
+       </font>
      </div>
 
      <div class="list_rec right" style="background-color:#ffffff;">
