--- a/resources/gnome-control-center/printing-name-location.html
+++ b/resources/gnome-control-center/printing-name-location.html
@@ -24,7 +24,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">프린터 이름 및 위치 변경</font><br>
+      <font class="font title" id="title">프린터 이름 및 위치 변경</font><br>
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
