--- a/resources/gnome-control-center/printing-setup.html
+++ b/resources/gnome-control-center/printing-setup.html
@@ -24,7 +24,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">로컬 프린터 설정</font><br>
+      <font class="font title" id="title">로컬 프린터 설정</font><br>
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
