--- a/resources/gnome-control-center/privacy-location.html
+++ b/resources/gnome-control-center/privacy-location.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">위치 서비스 설정</font><br>
+      <font class="font title" id="title">위치 서비스 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
