--- a/resources/gnome-control-center/privacy-purge.html
+++ b/resources/gnome-control-center/privacy-purge.html
@@ -25,7 +25,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">휴지통 및 임시 파일 지우기</font><br>
+      <font class="font title" id="title">휴지통 및 임시 파일 지우기</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
