--- a/resources/gnome-control-center/privacy-screen-lock.html
+++ b/resources/gnome-control-center/privacy-screen-lock.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">자동 화면 잠금</font><br>
+      <font class="font title" id="title">자동 화면 잠금</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
