--- a/resources/gnome-control-center/sound-alert.html
+++ b/resources/gnome-control-center/sound-alert.html
@@ -29,7 +29,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">경보 및 효과음 설정</font><br>
+      <font class="font title" id="title">경보 및 효과음 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
