--- a/resources/gnome-control-center/sound-usespeakers.html
+++ b/resources/gnome-control-center/sound-usespeakers.html
@@ -29,7 +29,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">출력 장치 설정</font><br>
+      <font class="font title" id="title">출력 장치 설정</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
