--- a/resources/gnome-control-center/sound-volume.html
+++ b/resources/gnome-control-center/sound-volume.html
@@ -29,7 +29,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">출력 음량 변경</font><br>
+      <font class="font title" id="title">출력 음량 변경</font><br>
 
       <!--Rectangle-->
       <div class="Rectangle">
