--- a/resources/gnome-control-center/wacom-mode.html
+++ b/resources/gnome-control-center/wacom-mode.html
@@ -24,7 +24,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">와콤 태블릿 추적 모드 설정</font><br>
+      <font class="font title" id="title">와콤 태블릿 추적 모드 설정</font><br>
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
