--- a/resources/gnome-control-center/wacom-stylus.html
+++ b/resources/gnome-control-center/wacom-stylus.html
@@ -24,7 +24,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">스타일러스 설정</font><br>
+      <font class="font title" id="title">스타일러스 설정</font><br>
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
