--- a/resources/gnome-control-center/color-whatisprofile.html
+++ b/resources/gnome-control-center/color-whatisprofile.html
@@ -27,7 +27,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">색 프로파일이란?</font><br>
+      <font class="font title" id="title">색 프로파일이란?</font><br>
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
