--- a/resources/gnome-control-center/net-fixed-ip-address.html
+++ b/resources/gnome-control-center/net-fixed-ip-address.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">고정 IP 연결</font><br>
+      <font class="font title" id="title">고정 IP 연결</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
