--- a/resources/gnome-control-center/net-macaddress.html
+++ b/resources/gnome-control-center/net-macaddress.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">MAC 주소란?</font><br>
+      <font class="font title" id="title">MAC 주소란?</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
