--- a/resources/gnome-control-center/net-manual.html
+++ b/resources/gnome-control-center/net-manual.html
@@ -28,12 +28,12 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">수동 네트워크 설정</font><br>
+      <font class="font title" id="title">수동 네트워크 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자 네트워크가 자동으로 설정되도록 구성되지 않은 경우 사용자가 직접 네트워크 설정 정보를 입력해야 합니다. 이 경우 사용자가 네트워크 사용을 위해 필요한 설정을 알고 있어야 합니다. 만약 이 설정에 대해 모른다면 네트워크 관리자에게 문의하거나 라우터 또는 네트워크 스위치 설정을 확인해야 합니다.
+          <pre>사용자 네트워크가 자동으로 설정되도록 구성되지 않은 경우 사용자가 직접 네트워크 설정 정보를 입력해야 합니다. 이 경우 사용자가 네트워크 사용을 위해 필요한 설정을 알고 있어야 합니다. 만약 이 설정에 대해 모른다면 네트워크 관리자에게 문의하거나 라우터 또는 네트워크 스위치 설정을 확인해야 합니다. 네트워크 케이블이 연결된 경우 네트워크 패널에서, 그 이외에는 와이파이 패널에서 설정할 수 있습니다. 네트워크 케이블이 연결되어 있거나 무선랜카드가 켜져있는지 확인해야 합니다.
 
 다음 단계를 수행하여 수동으로 네트워크를 설정합니다.
 
@@ -42,7 +42,7 @@
           <img class="img border" src="start_default.jpeg" width="700" height="502"><br>
           <img class="img border" src="start_search_setting.jpeg" width="700" height="502">
 
-<div class="discription">2. [설정] 애플리케이션 사이드 바에서 [네트워크]를 클릭합니다.</div>
+<div class="discription">2. [설정] 애플리케이션 사이드 바에서 네트워크 케이블이 연결된 경우 [네트워크]를, 그 이외의 경우 [와이파이]를 클릭합니다.</div>
 
           <img class="img border" src="setting_network.jpeg" width="700" height="511"><br>
           <img class="img border" src="network_default.jpeg" width="700" height="462">
@@ -64,7 +64,8 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="net-wired#top">유선 네트워크</a><br>
+      <a href="net-wired#top">유선 네트워크</a><br><br>
+      <font class="font ref">참고 항목</font><br>
       <a href="net-wireless">와이파이</a>
     </footer>
     <footer class="info">
