--- a/resources/gnome-control-center/net-othersedit.html
+++ b/resources/gnome-control-center/net-othersedit.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">다른 사용자가 네트워크 연결을 변경할 수 없음</font><br>
+      <font class="font title" id="title">다른 사용자가 네트워크 연결을 변경할 수 없음</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
