--- a/resources/gnome-control-center/net-slow.html
+++ b/resources/gnome-control-center/net-slow.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">인터넷 속도가 느림</font><br>
+      <font class="font title" id="title">인터넷 속도가 느림</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
