--- a/resources/gnome-control-center/net-wired-connect.html
+++ b/resources/gnome-control-center/net-wired-connect.html
@@ -30,7 +30,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">유선 인터넷 연결</font><br>
+      <font class="font title" id="title">유선 인터넷 연결</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
