--- a/resources/gnome-control-center/net-wired.html
+++ b/resources/gnome-control-center/net-wired.html
@@ -24,7 +24,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">유선 네트워크</font><br>
+      <font class="font title" id="title">유선 네트워크</font><br>
 
       <!--display-->
       <div class="small_rec left">
@@ -72,9 +72,9 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="net">네트워크</a><br><br>
+      <a href="net">네트워크</a><br>
+      <a href="net-wireless">와이파이</a><br><br>
       <font class="font ref">참고 항목</font><br>
-      <a href="net-wireless">와이파이</a></font>
     </footer>
     <footer class="info">
       <a onClick="showMore('name')"
