--- a/resources/gnome-control-center/privacy-history-recent-off.html
+++ b/resources/gnome-control-center/privacy-history-recent-off.html
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">사용 내역 추적 설정</font><br>
+      <font class="font title" id="title">사용 내역 추적 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
