--- a/resources/gnome-control-center/session-formats.html
+++ b/resources/gnome-control-center/session-formats.html
@@ -18,7 +18,7 @@
         <li><img class="img" src="grey.svg">
         <li><a href="prefs-language">지역 및 언어</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">날짜 및 측정 단위 변경</a>
+        </li><li><a href="#top">날짜 형식 및 단위 변경</a>
       </ul>
     </nav>
     <!--end of navbar-->  
@@ -28,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">날짜 형식 및 단위 변경</font><br>
+      <font class="font title" id="title" >날짜 형식 및 단위 변경</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
@@ -52,14 +52,6 @@
           <img class="img border" src="region_language_type.jpeg" width="700" height="459">
 
 특정 국가를 선택하면 그 국가에서 사용 중인 날짜 형식이나 단위를 확인할 수 있습니다. 변경 내용을 적용하려면 시스템을 다시 시작해야 합니다.
-
-원하는 국가나 언어가 없는 경우 아래 명령어를 입력하여 추가할 수 있습니다.
-
-          <div class="discription">sudo vim /etc/locale.gen</div>
-
-원하는 국가나 언어를 추가하거나 주석을 제거한 후 아래 명령어를 입력하여 시스템을 다시 시작합니다. 
-
-          <div class="discription">sudo locale-gen</div>
 
 이제 변경된 날짜 형식 및 단위를 확인할 수 있습니다.</pre>
 
