--- a/resources/gnome-control-center/session-language.html
+++ b/resources/gnome-control-center/session-language.html
@@ -28,12 +28,12 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">사용 언어 변경</font><br>
+      <font class="font title" id="title">사용 언어 변경</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자는 자신에게 적합한 언어 팩을 설치하여 사용할 수 있습니다. 기본적으로 영어와 한국어 팩이 제공되며 한국어로 기본 설정되어 있습니다.
+          <pre>사용자는 자신에게 적합한 언어를 설정하여 구름을 사용할 수 있습니다. 기본적으로 영어와 한국어 팩이 제공되며 한국어로 기본 설정되어 있습니다.
 
 다음 단계를 수행하여 사용 언어를 변경합니다.
 
@@ -50,14 +50,6 @@
 <div class="discription">3. [언어]에서 원하는 언어를 검색하여 선택합니다.</div>
 
 변경 내용을 적용하려면 시스템을 다시 시작해야 합니다. 일부 언어에 대한 번역은 품질이 낮을 수 있으며, 특정 애플리케이션은 설정한 언어를 지원하지 않을 수도 있습니다. 선택한 언어로 번역되지 않은 일부 인터페이스는 개발할 때 설정된 언어로 표시됩니다.
-
-원하는 국가나 언어가 없는 경우 아래 명령어를 입력하여 추가할 수 있습니다.
-
-          <div class="discription">sudo vim /etc/locale.gen</div>
-
-원하는 국가나 언어를 추가하거나 주석을 제거한 후 아래 명령어를 입력하여 시스템을 다시 시작합니다.
-
-          <div class="discription">sudo locale-gen</div>
 
 이제 변경된 언어를 확인할 수 있습니다.</pre>
 
