--- a/resources/gnome-control-center/session-screenlocks.html
+++ b/resources/gnome-control-center/session-screenlocks.html
@@ -16,9 +16,7 @@
         <li><img class="img" src="help.svg">
         <li><a href="index#top">설정</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="prefs-device">장치</a>
-        <li><img class="img" src="grey.svg">
-        <li><a href="prefs-display#top">디스플레이</a>
+        <li><a href="power#top">전원</a>
         <li><img class="img" src="grey.svg">
         </li><li><a href="#top">화면 잠금 시간 설정</a>
       </ul>
@@ -30,7 +28,7 @@
     <div class="div_root">
 
       <!--sub title-->
-      <font class="font sub_title">화면 잠금 시간 설정</font><br>
+      <font class="font title" id="title">화면 잠금 시간 설정</font><br>
 
       <!-- Rectangle-->
       <div class="Rectangle">
@@ -58,8 +56,7 @@
 
     <footer>
       <font class="font ref">추가 정보</font><br>
-      <a href="prefs-display">디스플레이</a><br>
-      <a href="hardware-problems-graphics">디스플레이 문제</a><br><br>
+      <a href="power#top">전원</a><br><br>
 
       <font class="font ref">참고 항목</font><br>
       <a href="privacy-screen-lock">자동 화면 잠금</a><br>
