--- a/resources/gnome-control-center/shell-keyboard-shortcuts.html
+++ b/resources/gnome-control-center/shell-keyboard-shortcuts.html
@@ -20,8 +20,6 @@
         <li><img class="img" src="grey.svg">
         <li><a href="keyboard#top">키보드</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="keyboard#other_topics">기타 내용</a>
-        <li><img class="img" src="grey.svg">
         </li><li><a href="#top">유용한 바로 가기 확인</a>
       </ul>
     </nav>
@@ -32,7 +30,7 @@
     <div class="div_root">
 
       <!--title-->
-      <font class="font title">유용한 바로 가기 확인</font><br>
+      <font class="font title" id="title">유용한 바로 가기 확인</font><br>
       <font class="font text">
         <pre>사용자가 컴퓨터와 애플리케이션을 더욱 효율적으로 사용할 수 있게 해주는 바로 가기를 확인합니다. 만약 마우스나 기타 포인팅 장치가 사용이 불가능한 경우 <a href="keyboard-nav">키보드 탐색</a>을 참고하세요.</pre></font>
       <br>
