--- a/resources/gnome-control-center/wacom-multi-monitor.html
+++ b/resources/gnome-control-center/wacom-multi-monitor.html
@@ -24,7 +24,7 @@
     <!-- for align 30px -->
     <div class="div_root">
       <!--sub title-->
-      <font class="font sub_title">모니터 선택</font><br>
+      <font class="font title" id="title">모니터 선택</font><br>
       <!--Rectangle-->
       <div class="Rectangle">
         <font class="font text">
