Fixed some issues & Changed style.css file
Change-Id: I6bcacc7f6b6b360a2880d6414c078c297900caab

--- a/resources/gooroom-help-gedit/additional_plugins.html
+++ b/resources/gooroom-help-gedit/additional_plugins.html
@@ -42,7 +42,7 @@
 2. 플러그인 파일을 /home/username/.local/share/gedit/plugins 디렉터리에 배치합니다(username은 실제 사용자 이름으로 변경).
 
 
-3. 플러그인 파일을 올바른 디렉터리에 배치하면 플러그인이 기본 설정 메뉴에 나타납니다. 플러그인을 사용하도록 설정하려면 Edit preferences Preferences ▸ Plugins ▸ [Name of Plugin]을 선택합니다.
+3. 플러그인 파일을 올바른 디렉터리에 배치하면 플러그인이 기본 설정 메뉴에 나타납니다. 플러그인을 사용하도록 설정하려면 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ [Name of Plugin]을 선택합니다.
 
 4. Close를 클릭합니다.</div>
 
