--- a/resources/gooroom-help-gedit/certain_pages.html
+++ b/resources/gooroom-help-gedit/certain_pages.html
@@ -38,9 +38,7 @@
        <font class="font text">
         <pre>원하는 페이지를 인쇄하려면 다음을 수행합니다.
 
-         <div  class="discription">1. File ▸ Print...(파일 ▸ 인쇄...)를 선택합니다.
-
-2. [인쇄] 대화 상자의 [일반] 탭 [범위] 항목에서 페이지를 선택합니다.
+         <div  class="discription">1. [인쇄] 대화 상자의 [일반] 탭 [범위] 항목에서 페이지를 선택합니다.
 
 3. 문서에서 인쇄할 페이지의 번호를 쉼표로 구분하여 입력합니다. 대시보드를 사용하여 페이지 범위를 지정합니다.</div></pre>     
        </font>
