--- a/resources/gooroom-help-gedit/change_font.html
+++ b/resources/gooroom-help-gedit/change_font.html
@@ -35,7 +35,7 @@
        <font class="font text">
          <pre>텍스트 편집기에서 기본 글꼴을 변경하려면:
 
-<div class="discription">1. 텍스트 편집기 ▸ Preferences ▸ Font & Colors를 선택합니다.
+<div class="discription">1. 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 글꽃 및 색을 선택합니다.
 
 2. [시스템 고정 너비 글꼴 사용] 선택란을 선택 해제합니다.
 
