--- a/resources/gooroom-help-gedit/color.html
+++ b/resources/gooroom-help-gedit/color.html
@@ -33,7 +33,7 @@
      <div class="Rectangle">
        <font class="font text">
         <pre>색 구성표를 변경하려면 다음을 수행합니다.
-         <div class="discription"><pre>1. 창의 오른쪽 상단 메뉴 버튼을 누르고 Preferences ▸ Font & Colors를 선택합니다.
+         <div class="discription"><pre>1. 창의 오른쪽 상단 메뉴 버튼을 누르고 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 글꼴 및 색을 선택합니다.
          
 2. 원하는 색 구성표를 선택하면 해당 색 구성표가 바로 적용됩니다.</div>      
        </font>
