--- a/resources/gooroom-help-gedit/get_copies.html
+++ b/resources/gooroom-help-gedit/get_copies.html
@@ -17,7 +17,7 @@
         <li><img class="img" src="grey.svg">
         </li><li><a href="print#multiple_copies">여러 복사본과 지정된 범위 간 인쇄</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">올바른 순서로 인쇄할 복사본 가져오기</a>
+        </li><li><a href="#top">인쇄 순서 정하기</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -29,18 +29,18 @@
 
    <!-- for align 30px -->
    <div class="div_root">
-     <font class="font title">올바른 순서로 인쇄할 복사본 가져오기</font><br>
+     <font class="font title">인쇄 순서 정하기</font><br>
 
 
-     <font class="font sub_title">인쇄 순서 반전</font>
+     <font class="font sub_title">마지막 페이지부터 인쇄</font>
      <!-- Rectangle-->
      <div class="Rectangle">
        <font class="font text">
         <pre>프린터는 일반적으로 첫 페이지를 먼저 인쇄하고 마지막 페이지를 마지막으로 인쇄합니다. 인쇄 순서를 반대로 하려면 다음을 수행합니다.
 
-         <div class="discription">1.파일 ▸ 인쇄를 선택합니다.
+         <div class="discription">1. 인쇄창의 [일반] 탭을 열어 줍니다.
 
-2. [인쇄] 대화 상자의 [일반] 탭에서 [반전]을 선택합니다.</div>
+2. 하단의 [인쇄 매수]의 [마지막 페이지부터(R)]을 선택합니다.</div>
 
 이렇게 하면 마지막 페이지가 먼저 인쇄됩니다.</pre>     
        </font>
@@ -53,9 +53,9 @@
        <font class="font text">
        <pre>문서의 복사본을 두 개 이상 인쇄하는 경우 인쇄물은 기본적으로 페이지 번호별로 그룹화됩니다. 데이터 정렬을 수행하면 각 사본에 해당 페이지가 함께 그룹화됩니다.
        
-<div class="discription">1. File ▸ Print(파일 ▸ 인쇄)를 클릭합니다.
+<div class="discription">1. 인쇄창의 [일반] 탭을 열어 줍니다.
 
-2. [인쇄] 대화 상자의 [일반] 탭에서 [복사본]을 선택합니다.</div>
+2. 하단의 [인쇄 매수]의 [한 부씩 인쇄(O)]를 선택합니다.</div>
 
 </pre>
        </font>
