--- a/resources/gooroom-help-gedit/git.html
+++ b/resources/gooroom-help-gedit/git.html
@@ -34,16 +34,16 @@
      <font class="font title">git</font><br>
      <font class="font text">git 플러그인은 마지막 커밋 이후 변경된 행을 강조 표시합니다.</font><br>
      <br><br>
-     <div class="Rectangle"><pre>플러그인을 사용하도록 설정하려면 gedit ▸ Preferences ▸ Plugins ▸ Git을 선택합니다.
+     <div class="Rectangle"><pre>플러그인을 사용하도록 설정하려면 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ Git을 선택합니다.
 변경 사항은 문서 여백에 세 가지 색상으로 표시됩니다.
 
-Green
+초록색
 문서에 추가된 새 행을 표시합니다.
 
-Orange
+주황색
 문서에서 수정된 행을 표시합니다.
 
-Red
+빨간색
 삭제된 문서의 일부를 표시합니다.
 
 마우스 포인터를 빨간색 또는 주황색 여백에 놓으면 도구 팁의 원래 텍스트가 표시됩니다.</pre></div><!-- end of Rectangle-->
