--- a/resources/gooroom-help-gedit/modelines.html
+++ b/resources/gooroom-help-gedit/modelines.html
@@ -17,7 +17,7 @@
         <li><img class="img" src="grey.svg">
         </li><li><a href="plugins#default">기본 플러그인</a>
         <li><img class="img" src="grey.svg">
-        </li><li><a href="#top">Modelines</a>
+        </li><li><a href="#top">모드라인</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -31,15 +31,15 @@
    <div class="div_root">
 
      <!--TiTle -->
-     <font class="fon title">Modelines</font><br>
-     <font class="font text">Modelines 플러그인을 사용하면 gedit에서 파일의 시작과 끝에 있는 텍스트 행을 분석하여 환경 설정을 일괄 적용할 수 있습니다. Modelines 플러그인은 Emacs, Kate 및 Vim 텍스트 편집기에서 사용되는 옵션의 하위 집합을 지원합니다.
-Modelines 플러그인을 사용하도록 설정하려면 gedit edit Preferences ▸ Plugins ▸ Modelines를 선택합니다.</font><br>
+     <font class="fon title">모드라인</font><br>
+     <font class="font text">모드라인 플러그인을 사용하면 gedit에서 파일의 시작과 끝에 있는 텍스트 행을 분석하여 환경 설정을 일괄 적용할 수 있습니다. 모드라인 플러그인은 Emacs, Kate 및 Vim 텍스트 편집기에서 사용되는 옵션의 하위 집합을 지원합니다.
+모드라인 플러그인을 사용하도록 설정하려면 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ 모드라인를 선택합니다.</font><br>
 
      <br>
 
      <font class="font sub_title">일반 옵션</font><br>
        <div class="Rectangle">
-         <pre>gedit modelines를 사용하여 다음 옵션을 설정할 수 있습니다.
+         <pre>하단의 모드라인을 사용하여 다음 옵션을 설정할 수 있습니다.
          
 <div class="discription">- 탭 너비
 
@@ -51,14 +51,14 @@ Modelines 플러그인을 사용하도록 설정하려면 gedit edit Preferences
 
 - 오른쪽 여백 너비</div>
 
-**Modelines 설정은 [기본 설정] 대화 상자 설정보다 우선합니다.</pre>
+**모드라인 설정은 [기본 설정] 대화 상자 설정보다 우선합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
 
-     <font class="font sub_title">Emacs Modelines</font><br>
+     <font class="font sub_title">Emacs 모드라인</font><br>
        <div class="Rectangle">
-         <pre>Emacs Modelines는 문서의 처음 두 행을 스캔합니다. gedit에서는 다음 Emacs Modelines 옵션을 지원합니다.
+         <pre>Emacs 모드라인는 문서의 처음 두 행을 스캔합니다. gedit에서는 다음 Emacs 모드라인 옵션을 지원합니다.
 
 <div class="discription">- 탭 너비
 
@@ -68,14 +68,14 @@ Modelines 플러그인을 사용하도록 설정하려면 gedit edit Preferences
 
 - 텍스트 자동 줄 바꿈</div>
 
-Emacs Modelines에 대한 자세한 내용은 <a href="https://www.gnu.org/software/emacs/manual/emacs">GNU Emacs Manual</a>을 참조합니다.</pre>
+Emacs 모드라인에 대한 자세한 내용은 <a href="https://www.gnu.org/software/emacs/manual/emacs">GNU Emacs Manual</a>을 참조합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
 
-     <font class="font sub_title">Kate Modelines</font><br>
+     <font class="font sub_title">Kate 모드라인</font><br>
        <div class="Rectangle">
-         <pre>Kate Modelines는 문서의 첫 번째 행과 마지막 행을 스캔합니다. gedit에서는 다음 Kate Modelines 옵션을 지원합니다.
+         <pre>Kate 모드라인는 문서의 첫 번째 행과 마지막 행을 스캔합니다. gedit에서는 다음 Kate 모드라인 옵션을 지원합니다.
 
           
 <div class="discription">- 탭 너비
@@ -88,14 +88,14 @@ Emacs Modelines에 대한 자세한 내용은 <a href="https://www.gnu.org/softw
 
 - word-wrap-column</div>
 
-Kate Modelines에 대한 자세한 내용은 <a href=""https://kate-editor.org/>Kate Website</a>를 참조합니다.</pre>
+Kate 모드라인에 대한 자세한 내용은 <a href=""https://kate-editor.org/>Kate Website</a>를 참조합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
 
-     <font class="font sub_title">Vim Modelines</font><br>
+     <font class="font sub_title">Vim 모드라인</font><br>
        <div class="Rectangle">
-         <pre>Vim Modelines는 문서의 처음 행 3개와 마지막 행 3개를 스캔합니다. gedit에서는 다음 Vim Modelines 옵션을 지원합니다.
+         <pre>Vim 모드라인는 문서의 처음 행 3개와 마지막 행 3개를 스캔합니다. gedit에서는 다음 Vim 모드라인 옵션을 지원합니다.
 		 
 		 
 <div class="discription">- et (expandtab)
@@ -108,7 +108,7 @@ Kate Modelines에 대한 자세한 내용은 <a href=""https://kate-editor.org/>
 
 - textwidth</div>
 
-Vim Modelines에 대한 자세한 내용은 <a href="https://www.vim.org/">Vim Website</a>를 참조합니다.</pre>
+Vim 모드라인에 대한 자세한 내용은 <a href="https://www.vim.org/">Vim Website</a>를 참조합니다.</pre>
      </div><!-- end of Rectangle-->
 
 
