--- a/resources/gooroom-help-gedit/replace_text.html
+++ b/resources/gooroom-help-gedit/replace_text.html
@@ -26,7 +26,7 @@
    <!-- for align 30px -->
    <div class="div_root">
      <font class="font title">텍스트 바꾸기</font><br>
-     <font class="font text">텍스트 편집에 시간이 오래 걸릴 수 있습니다. 텍스트 편집기에는 편집 시간을 절약하기 위해 일부 텍스트를 찾아 바꾸는 데 도움을 주는 Replace 기능이 포함되어 있습니다.</font> <br>
+     <font class="font text">텍스트 편집에 시간이 오래 걸릴 수 있습니다. 텍스트 편집기에는 편집 시간을 절약하기 위해 일부 텍스트를 찾아 바꾸는 데 도움을 주는 <i>찾아서 바꾸기</i> 기능이 포함되어 있습니다.</font> <br>
 
      <br><br>
      
@@ -58,22 +58,17 @@
        <font class="font text">
        <pre>원하는 경우 검색 조건에 다음 매개 변수를 추가할 수 있습니다.</pre>
          <div class="discription"><pre>
-Match case
-  대/소문자 구분 옵션을 사용하여 대/소문자를 구분할지 여부를 지정할 수 있습니다. 이 옵션을 선택하면 
-  대소문자를 구분하여 검색합니다.
+<B>대소문자 일치(M)</B>
+대/소문자 구분 옵션을 사용하여 대/소문자를 구분할지 여부를 지정할 수 있습니다. 이 옵션을 선택하면 대소문자를 구분하여 검색합니다.
  
-Match entire word only
-  다른 단어의 일부를 포함하지 않고 특정 단어를 검색하려면 이 옵션을 사용합니다. 예를 들어 이 옵션을 
-  선택한 상태에서 'and'를 검색하면 단어 'and'는 검색되지만 'sand' 및 'commander'와 같은 단어는 검색되지
-  않습니다.
+<B>전체가 맞는 단어만(E)</B>
+다른 단어의 일부를 포함하지 않고 특정 단어를 검색하려면 이 옵션을 사용합니다. 예를 들어 이 옵션을 선택한 상태에서 'and'를 검색하면 단어 'and'는 검색되지만 'sand' 및 'commander'와 같은 단어는 검색되지 않습니다.
 
-Search backwards
-  [이전 찾기] 명령과 동일하게 작동합니다. 검색 결과를 처음부터 끝까지 진행하려면 이 옵션을 
-  선택합니다.
+<B>뒤로 검색(B)</B>
+[이전 찾기] 명령과 동일하게 작동합니다. 검색 결과를 처음부터 끝까지 진행하려면 이 옵션을 선택합니다.
   
-Wrap around
-  줄바꿈 옵션이 활성화된 상태에서 파일의 마지막까지 검색한 다음 파일 처음에서 검색/바꾸기 작업을
-  다시 시작합니다. 이렇게 하면 전체 파일에 걸쳐 검색/바꾸기 작업이 수행됩니다.</pre></div>
+<B>끝까지 가면 처음부터(P)</B>
+줄바꿈 옵션이 활성화된 상태에서 파일의 마지막까지 검색한 다음 파일 처음에서 검색/바꾸기 작업을 다시 시작합니다. 이렇게 하면 전체 파일에 걸쳐 검색/바꾸기 작업이 수행됩니다.</pre></div>
 
        </font>
      </div><!-- end of Rectangle-->
