--- a/resources/gooroom-help-gedit/spell_check.html
+++ b/resources/gooroom-help-gedit/spell_check.html
@@ -35,13 +35,13 @@
 
      <font class="font sub_title">맞춤법 검사</font><br>
      <div class="Rectangle">
-       <pre>맞춤법 검사 기능은 필요에 따라 사용할 수 있는 gedit의 플러그인으로 제공됩니다. 플러그인을 사용하도록 설정하려면 다음을 수행합니다.
+       <pre>맞춤법 검사 기능은 필요에 따라 사용할 수 있는 텍스트 편집기의 플러그인으로 제공됩니다. 플러그인을 사용하도록 설정하려면 다음을 수행합니다.
 
-<div class="discription">1.gedit ▸ Preferences ▸ Plugins를 선택합니다.
+<div class="discription">1.텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인을 선택합니다.
 
 2.플러그인을 사용하려면 철자 검사기를 선택합니다.</div></pre>
      </div><!-- end of Rectangle-->
-
+인
      <br><br>
 
      <font class="font sub_title">텍스트 편집기에서 맞춤법 검사기 사용하기</font><br>
@@ -69,23 +69,23 @@
 
 - <i>모두 바꾸기</i> 목록에서 선택한 대체 단어 또는 인식되지 않는 모든 대체 단어를 변경합니다.
 
-- <i>단어 추가</i>를 사용하여 현재 단어를 gedit 사용자 사전에 추가할 수 있습니다. 사용자 사전에 사용자 지정 단어를 추가하면 gedit가 문서의 단어를 인식할 수 있으므로, 철자가 틀린 단어로 강조 표시되지 않습니다.</pre>
+- <i>단어 추가</i>를 사용하여 현재 단어를 텍스트 편집기 사용자 사전에 추가할 수 있습니다. 사용자 사전에 사용자 지정 단어를 추가하면 텍스트 편집기가 문서의 단어를 인식할 수 있으므로, 철자가 틀린 단어로 강조 표시되지 않습니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
 
      <font class="font sub_title">맞춤법 검사기 정의</font><br>
      <div class="Rectangle">
-       <pre>기본적으로 gedit는 현재 언어를 사용하여 문서의 철자를 검사합니다. 다른 언어를 사용해야 하는 경우 도구 ▸ 언어 설정을 선택한 다음 사용할 언어를 선택합니다.</pre>
+       <pre>기본적으로 텍스트 편집기는 현재 언어를 사용하여 문서의 철자를 검사합니다. 다른 언어를 사용해야 하는 경우 도구 ▸ 언어 설정을 선택한 다음 사용할 언어를 선택합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
 
      <font class="font sub_title">사전</font><br>
      <div class="Rectangle">
-       <pre>gedit는 철자 검사를 위해 시스템 유틸리티인 Enchant를 사용합니다. Enchant는 여러 사전을 사용하여 맞춤법을 검사할 수 있습니다(예: Hunspell 및 Aspell 등) .
+       <pre>텍스트 편집기는 철자 검사를 위해 시스템 유틸리티인 Enchant를 사용합니다. Enchant는 여러 사전을 사용하여 맞춤법을 검사할 수 있습니다(예: Hunspell 및 Aspell 등) .
     
-사용할 언어를 gedit에서 사용할 수 없는 경우 컴퓨터의 소프트웨어 설치 관리자 또는 패키지 관리자를 사용하여 원하는 사전을 설치합니다.</pre>
+사용할 언어를 텍스트 편집기에서 사용할 수 없는 경우 컴퓨터의 소프트웨어 설치 관리자 또는 패키지 관리자를 사용하여 원하는 사전을 설치합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
