--- a/resources/gooroom-help-gedit/word_completion.html
+++ b/resources/gooroom-help-gedit/word_completion.html
@@ -38,7 +38,7 @@
      <div class="Rectangle">
        <pre>플러그인을 사용하도록 설정하려면 다음을 수행합니다.
 
-<div class="discription">1. Edit ▸ Preferences ▸ Plugins를 선택합니다.
+<div class="discription">1. 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인을 선택합니다.
 
 2. [단어 완성]을 선택하여 플러그인을 사용하도록 설정합니다.</div>
 
