--- a/resources/gooroom-help-nemo/nautilus-connect.html
+++ b/resources/gooroom-help-nemo/nautilus-connect.html
@@ -28,20 +28,17 @@
     <font class="font text">
       <pre>서버 또는 네트워크 공유에 연결하여 해당 서버의 파일을 볼 수 있습니다. 이 방법을 사용하여 다른 사람과 쉽게 파일을 공유할 수 있습니다.
 
-네트워크에서 파일을 찾으려면 [활동 개요]에서 [파일 관리자]를 열고 사이드 바에서 [기타 위치]를 선택합니다. 
-이렇게 하면 파일 관리자가 로컬 영역 네트워크에서 파일 서비스 기능이 있는 모든 컴퓨터를 찾습니다. 
-인터넷의 서버에 연결하려고 하거나 시스템을 찾을 수 없는 경우 [인터넷] 또는 [네트워크 주소]를 입력하여 서버에 수동으로 연결할 수 있습니다.</pre>
+네트워크에서 파일을 찾으려면 상단 메뉴 중 [파일]에서 [서버에 연결(S)...]을 클릭하여 서버에 수동으로 연결할 수 있습니다.</pre>
     </font>
    
     <!-- small box -->
     <div class="small_rec" style="width:100%; height: fit-content;">
         <font class="font" style="font-size:14px;">
-          <pre><b>파일 서버에 연결</b></pre>
+          <pre><b>서버에 연결</b></pre>
           <div class="discription">
-              <pre>1. 파일 관리자의 사이드 바에서 [기타 위치]를 클릭합니다.
+              <pre>1. 상단 메뉴 바에서 [파일]을 클릭합니다.
 
-2. [서버에 연결]에서 서버 <a href=#urls>URL</a>을 입력합니다. 지원되는 URL에 대한 자세한 내용은 <a href=#types>서버 유형</a>을 참조합니다.
-  ※이전에 서버에 연결했다면 [최근 서버 목록]에서 해당 서버를 클릭하여 연결할 수 있습니다.
+2. [서버에 연결(S)...]에서 서버 <a href=#urls>URL</a>을 입력합니다. 지원되는 URL에 대한 자세한 내용은 <a href=#types>서버 유형</a>을 참조합니다.
 
 3. [연결]을 클릭합니다. 서버의 파일이 표시됩니다. 또한 서버가 사이드 바에 추가되어 나중에 빠르게 액세스할 수 있습니다.</pre>
         </font>
