--- a/resources/gooroom-help-gedit/bookmark.html
+++ b/resources/gooroom-help-gedit/bookmark.html
@@ -32,10 +32,10 @@
 
      <!--TiTle -->
      <font class="font title">책갈피</font><br>
-     <font class="font text">gedit 책갈피를 사용하면 문서 또는 프로그램 내에서 중요한 텍스트 행을 강조 표시하여 쉽게 찾을 수 있습니다. 책갈피 사이를 이동하여 문서를 더 빠르게 탐색할 수도 있습니다.</font><br>
+     <font class="font text">텍스트 편집기 책갈피를 사용하면 문서 또는 프로그램 내에서 중요한 텍스트 행을 강조 표시하여 쉽게 찾을 수 있습니다. 책갈피 사이를 이동하여 문서를 더 빠르게 탐색할 수도 있습니다.</font><br>
      <br><br>
      <div class="Rectangle">
-       <pre>책갈피 플러그인을 사용하려면 gedit edit Preferences ▸ Plugins ▸ Bookmarks를 선택합니다.
+       <pre>책갈피 플러그인을 사용하려면 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 ▸ Bookmarks를 선택합니다.
 
 책갈피를 삽입하거나 제거하려면 다음을 수행합니다.
 
