--- a/resources/gooroom-help-gedit/translate.html
+++ b/resources/gooroom-help-gedit/translate.html
@@ -39,7 +39,7 @@
      <div class="Rectangle">
        <pre>Translation 플러그인을 사용하려면 다음을 수행합니다.
 
-<div class="discription">1. gedit ▸ Preferences ▸ Plugins를 선택합니다.
+<div class="discription">1. 텍스트 편집기 ▸ 상단 <img src="view-more-symbolic.svg" width="20" style="background-color: gainsboro;">버튼 ▸ 기본설정 ▸ 플러그인 선택합니다.
 
 2. Translation(번역)을 선택하여 플러그인을 사용하도록 설정합니다.
 
