Updated gnome control center device display hyperlink
Change-Id: I25e00ccdc233d8319aeba62a344049c53547bfac

--- a/resources/gnome-control-center/prefs-device.html
+++ b/resources/gnome-control-center/prefs-device.html
@@ -31,7 +31,7 @@
        <font class="font text">
          <pre><a href="prefs-display">디스플레이</a>
 
-<a class="none" href="display-night-light">화면 색 온도 조절</a>, <a class="none" href="look-background">바탕 화면 및 잠금 화면 배경 변경</a>, <a class="none" href="look-resolution">화면 방향, 해상도 및 주사율 설정</a> …</pre>
+<a class="none" href="display-night-light">야간 모드 설정</a>, <a class="none" href="look-resolution">화면 방향, 해상도 및 주사율 설정</a>, <a class="none" href="display-dual-monitors">추가 모니터 연결</a> …</pre>
        </font>
      </div>
 
@@ -39,7 +39,7 @@
        <font class="font text">
          <pre><a href="keyboard">키보드</a>
 
-<a class="none" href="a11y">키보드접근성</a>, <a class="none" href="keyboard-repeat-keys">반복 키 설정</a>, <a class="none" href="keyboard-shortcuts-set">바로 가기 키 설정</a> …</pre>
+<a class="none" href="a11y">키보드 접근성</a>, <a class="none" href="keyboard-repeat-keys">반복 키 설정</a>, <a class="none" href="keyboard-shortcuts-set">바로 가기 키 설정</a> …</pre>
        </font>
      </div>
 
@@ -47,7 +47,7 @@
        <font class="font text">
          <pre><a href="mouse">마우스 및 터치패드</a>
 
-<a class="none" href="mouse-lefthanded">왼손잡이</a>, <a class="none" href="mouse-sensitivity">속도조정</a>, <a class="none" href="mouse-touchpad-click">터치패드 클릭, 드래그, 스크롤 설정</a> …</pre>
+<a class="none" href="mouse-lefthanded">마우스 오른쪽 및 왼쪽 단추 설정 변경</a>, <a class="none" href="mouse-sensitivity">마우스 및 터치패드 속도 조정</a>, <a class="none" href="mouse-touchpad-click">터치패드 클릭, 드래그, 스크롤 설정</a> …</pre>
        </font>
      </div><!--end of 1st-->
 
