--- a/resources/gnome-control-center/power.html
+++ b/resources/gnome-control-center/power.html
@@ -71,6 +71,18 @@
         </font>
 
       </div>
+
+      <!--power-status-->
+      <div class="small_rec right">
+        <font class="font text">
+          <pre><a href="power-status">노트북 전원 상태 표시</a>
+
+노트북에서 추가로 나타나는 상태를 설명합니다. 배터리 충전 정도, 화면 밝기 등을 표시합니다.
+          </pre>
+        </font>
+
+      </div>
+
     </div>   <!-- end of div_root-->
 
     <footer>
