[Bug:3399,3473,3499,3500,3501,3502,3504,3507] Fixed the issues
Change-Id: Idd6ecc377dc3ae70d6854cbcefcaab8e157f6e62

--- a/resources/gooroom-help-eog/slideshow.html
+++ b/resources/gooroom-help-eog/slideshow.html
@@ -26,7 +26,7 @@
    <!-- for align 30px -->
    <div class="div_root">
      <!--TiTle -->
-     <font class="font"class="title">슬라이드 쇼</font><br><br>
+     <font class="font" style="font-size:22;">슬라이드 쇼</font><br><br>
 
      <!--Rectangle-->
      <div class="Rectangle"><font class="font text"></font>
