--- a/resources/gooroom-help-gedit/modelines.html
+++ b/resources/gooroom-help-gedit/modelines.html
@@ -88,7 +88,7 @@ Emacs 모드라인에 대한 자세한 내용은 <a href="https://www.gnu.org/so
 
 - word-wrap-column</div>
 
-Kate 모드라인에 대한 자세한 내용은 <a href=""https://kate-editor.org/>Kate Website</a>를 참조합니다.</pre>
+Kate 모드라인에 대한 자세한 내용은 <a href="https://kate-editor.org/">Kate Website</a>를 참조합니다.</pre>
      </div><!-- end of Rectangle-->
 
      <br><br>
