--- a/resources/gooroom-help-screen-shot/func.html
+++ b/resources/gooroom-help-screen-shot/func.html
@@ -48,7 +48,7 @@
            <pre>[다음 시간이 지난 후에 찍기(D)]는 타이머 기능을 제공합니다. 
 스크린샷을 찍기 전에 준비가 필요하거나 지연 시간이 필요한 경우에 원하는 시간을 입력하여 사용합니다.</pre>
            </div>
-           <br><br>캡처한 이미지는 [내 폴더/다운로드]에 저장됩니다.
+           <br><br>캡처한 이미지는 [사진] 폴더에 저장됩니다.
          </div>
        </font>
      </div>
