--- a/resources/gooroom-sysinfo/policy.html
+++ b/resources/gooroom-sysinfo/policy.html
@@ -59,7 +59,8 @@
 
 <B>단말 보안 정책</B>
 
-구름 플랫폼을 사용하는 단말의 보안 정책을 나타냅니다. 현재 상태들을 나타내며, 프로그램을 이용해 수정/편집 할 수는 없습니다.
+GPMS에서 지정한  사용자의 단말의 보안 정책을 나타냅니다. 현재 상태들을 나타내며, [구름 보안 상태 보기]프로그램을 이용해 수정/편집 할 수는 없습니다. 화면보호기 시간을 변경하려면 <a href="../gnome-control-center/index">[설정]</a>의 <a href="../gnome-control-center/display-blank">빈 화면 설정</a>를 참고하세요.
+
 
 
 
