[Bug:3510]Updated gnome control center wacom digitizer image
Change-Id: I560c269114f2d0f30c77901e247513466fbae5d1

--- a/resources/gnome-control-center/wacom-left-handed.html
+++ b/resources/gnome-control-center/wacom-left-handed.html
@@ -40,11 +40,13 @@
 <div class="discription">2. [설정] 애플리케이션 사이드 바에서 [장치]를 클릭하고 [디스플레이]를 클릭합니다.</div>
 
           <img class="img border" src="setting_device.jpeg" width="700" height="511"><br>
-          <img class="img border" src="device_display.jpeg" width="700" height="299">
+          <img class="img border" src="wacom_table.jpeg" width="700" height="532">
 
-<div class="discription">3. [와콤 디지타이저] 탭에서 [태블릿]을 클릭합니다.
+<div class="discription">3. [와콤 디지타이저] 탭에서 [태블릿]을 클릭합니다.</div>
 
-4. [왼손 사용자 방향] 스위치를 켭니다.</div></pre>
+          <img class="img border" src="wacom_table_settings.jpeg" border="1" width="700" height="305">
+
+<div class="discription">4. [왼손 사용자 방향] 스위치를 켭니다.</div></pre>
         </font>
       </div>  <!-- end of Rectangle-->
     </div>  <!-- end of div_root-->
