--- a/resources/gnome-control-center/wacom-mode.html
+++ b/resources/gnome-control-center/wacom-mode.html
@@ -40,11 +40,13 @@
 <div class="discription">2. [설정] 애플리케이션 사이드 바에서 [장치]를 클릭하고 [디스플레이]를 클릭합니다.</div>
 
           <img class="img border" src="setting_device.jpeg" width="700" height="511"><br>
-          <img class="img border" src="device_display.jpeg" width="700" height="299">
+          <img class="img border" src="wacom_table.jpeg" width="700" height="532">
 
-<div class="discription">3. [와콤 디지타이저] 탭에서 [태블릿]을 클릭합니다.
+<div class="discription">3. [와콤 디지타이저] 탭에서 [태블릿]을 클릭합니다.</div>
 
-4. [추적 모드]에서 [태블릿(절대적)] 또는 [터치패드(상대적)] 모드 중 하나를 선택합니다.</div>
+          <img class="img border" src="wacom_table_settings.jpeg" border="1" width="700" height="305">
+
+<div class="discription">4. [추적 모드]에서 [태블릿(절대적)] 또는 [터치패드(상대적)] 모드 중 하나를 선택합니다.</div>
 
 절대적 모드에서는 태블릿 그리기 영역의 포인터가 모니터 화면에 그대로 적용됩니다. 예를 들어 모니터 화면의 오른쪽 상단은 태블릿 그리기 영역의 오른쪽 상단에 매핑됩니다.
 
