--- a/resources/gnome-control-center/wacom-stylus.html
+++ b/resources/gnome-control-center/wacom-stylus.html
@@ -40,11 +40,13 @@
 <div class="discription">2. [설정] 애플리케이션 사이드 바에서 [장치]를 클릭하고 [디스플레이]를 클릭합니다.</div>
 
           <img class="img border" src="setting_device.jpeg" width="700" height="511"><br>
-          <img class="img border" src="device_display.jpeg" width="700" height="299">
+          <img class="img border" src="wacom_stylus.jpeg" width="700" height="532">
 
-<div class="discription">3. [와콤 디지타이저] 탭에서 [스타일러스]를 클릭합니다.
+<div class="discription">3. [와콤 디지타이저] 탭에서 [스타일러스]를 클릭합니다.</div>
 
-4. 다음과 같이 스타일러스에 대한 세부 옵션을 원하는 대로 설정합니다. 
+          <img class="img border" src="wacom_stylus_settings.jpeg" border="1"  width="700" height="305">
+
+<div class="discription">4. 다음과 같이 스타일러스에 대한 세부 옵션을 원하는 대로 설정합니다. 
 
 지우개 감도 조절: 슬라이더를 사용하여 감도를 조절합니다. 지우개의 감도를 부드럽거나 단단하게 설정할 수 있습니다.
 
