--- a/resources/gnome-control-center/power-suspend.html
+++ b/resources/gnome-control-center/power-suspend.html
@@ -33,7 +33,7 @@
       <!-- Rectangle-->
       <div class="Rectangle">
         <font class="font text">
-          <pre>사용자가 컴퓨터 전원 단추를 눌렀을 때의 실행할 동작을 설정할 수 있습니다. 설정할 수 있는 옵션에는 [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 있습니다. [아무 것도 안 함]을 선택한 경우, 컴퓨터 전원 단추를 눌러도 아무 것도 변경되지 않습니다.
+          <pre>사용자가 컴퓨터 전원 단추를 눌렀을 때의 실행할 동작을 설정할 수 있습니다. 설정할 수 있는 옵션에는 [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 있으며, 사용자의 장비에 따라 일부 옵션이 지원되지 않을 수 있습니다. [아무 것도 안 함]을 선택한 경우, 컴퓨터 전원 단추를 눌러도 아무 동작도 하지 않습니다.
 
 다음 단계를 수행하여 전원 단추 옵션을 설정합니다.
 
@@ -47,7 +47,7 @@
           <img class="img border" src="setting_power.jpeg" width="700" height="511"><br>
           <img class="img border" src="power_click_button.jpeg" width="700" height="459">
 
-<div class="discription">3. [전원 단추를 눌렀을 때] 설정을 변경합니다. [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 제공되며 기본적으로 [대기 모드]로 설정되어 있습니다.</div></pre>
+<div class="discription">3. [전원 단추를 눌렀을 때] 설정을 변경합니다. [대기 모드], [전원 끄기], [최대 절전], [아무 것도 안 함]이 제공되며 사용자의 장비에 따라 선택사항에서 제외되는 옵션이 존재할 수 있습니다. 기본적으로 [대기 모드]로 설정되어 있습니다.</div></pre>
 
         </font>
       </div>  <!-- end of Rectangle-->
