[Bug:3435,3469,3471]Fixed typo in eog & Updated gooroom-browser contents
Change-Id: I869559efabe7a51cb6d236f272078d8a21e695a5

--- a/resources/gooroom-help-eog/index.html
+++ b/resources/gooroom-help-eog/index.html
@@ -190,12 +190,11 @@ JPEG, PNG, BMP 등의 형식으로 저장할 수 있습니다.</pre></font>
      <!-- To separate sections-->
      <a name="advanced"></a></pre>
      <pre>
-     
 
+     </pre>
 
      <!-- sub title-->
-     <font class="font sub_title">고급</pre></font><br>
-
+     <font class="font sub_title">고급</font><br>
      <!-- ractangle 4 -->
      <div class="small_rec left">
          <font class="font text"><pre><a href="console">명령 행</a>
