--- a/resources/gooroom-help-eog/opening_a_picture_by_default.html
+++ b/resources/gooroom-help-eog/opening_a_picture_by_default.html
@@ -13,7 +13,7 @@
         <li><img class="img" src="grey.svg">
          <li> <a href="index#q&a">자주 묻는 질문</a>
         <li><img class="img" src="grey.svg">
-        <li><a href="#top">사진을 기본값으로 이미지 보기에서 열기</a>
+        <li><a href="#top">사진을 기본으로 이미지 보기에서 열기</a>
       </ul>
     </nav>
     <!--end of navbar-->
@@ -26,7 +26,7 @@
    <!-- for align 30px -->
    <div class="div_root">
      <!--TiTle -->
-     <font class ="font title">사진을 기본값으로 이미지 보기에서 열기</font><br><br>
+     <font class ="font title">사진을 기본으로 이미지 보기에서 열기</font><br><br>
 
      <!--Rectangle-->
      <div class="Rectangle"><pre>
@@ -37,10 +37,10 @@
         <div class="discription">
         <pre>1. [파일 관리자]에서 파일을 마우스 오른쪽 단추로 클릭한 다음 [속성]을 선택합니다.
 
-2. [열 프로그램] 탭으로 이동합니다. 추천 애플리케이션 목록이 나타납니다.
+2. [다른 프로그램으로 열기] 탭으로 이동합니다. 추천 애플리케이션 목록이 나타납니다.
 
-3. [이미지 보기]를 선택한 다음 [기본값으로 설정]을 클릭합니다.
-<div style="margin:20px;">[이미지 보기]가 추천 애플리케이션 목록에 없으면 [다른 프로그램 보기]를 클릭합니다. [이미지 보기]를 선택하고 [기본값으로 설정]을 클릭합니다.
+3. [이미지 보기]를 선택한 다음 [기본으로 설정]을 클릭합니다.
+<div style="margin:20px;">[이미지 보기]가 추천 애플리케이션 목록에 없으면 [다른 프로그램 보기]를 클릭합니다. [이미지 보기]를 선택하고 [기본으로 설정]을 클릭합니다.
 </div>
 4. [닫기]를 클릭합니다.</pre>
         </div>
