--- a/resources/gooroom-sysinfo/policy.html
+++ b/resources/gooroom-sysinfo/policy.html
@@ -32,7 +32,7 @@
 
 <B>알림창 표시 조건 (로그 레벨)</B>
 
-구름 플랫폼은 구름 보안프레임워크자 제공하는 4단계 보안 기술을 제공합니다.
+구름 플랫폼은 구름 보안프레임워크가 제공하는 4단계 보안 기술을 제공합니다.
 
 </pre>
 
@@ -53,7 +53,7 @@
   </table>
 </div>
 
-<pre>알리창 표시 조건은 위의 기술 3가지(1. 신뢰부팅 / 2.실행파일 검증 / 3.운영체제 보호)과 <a href="../grac-editors/index">매체제어</a> 기술을 이용하여 로그를 기록합니다. 각 영역의 체크박스는 로그를 기록하는 범위를 나타내며, 구름 시스템 보안 상태 자세히 보기 프로그램을 이용해 수정할 수는 없습니다.
+<pre>알림창 표시 조건은 위의 기술 3가지(1. 신뢰부팅 / 2.실행파일 검증 / 3.운영체제 보호)과 <a href="../grac-editors/index">매체제어</a> 기술을 이용하여 로그를 기록합니다. 각 영역의 체크박스는 로그를 기록하는 범위를 나타내며, 구름 시스템 보안 상태 자세히 보기 프로그램을 이용해 수정할 수는 없습니다.
 
 
 
