--- a/resources/index/index.html
+++ b/resources/index/index.html
@@ -143,6 +143,8 @@ MPlayer 기반 멀티미디어 플레이어를 통해 동영상을 재생할 수
          <pre><a href="../gooroom-help-nemo/index">파일</a></pre>
        </font>
        -->
+       </div>
+       </div>
    </div> <!-- end of div_root-->
 
    <footer class="info">
